# diploma

./: .gitignore  CMakeLists.txt  cpu_brisk.cpp  cpu_fast_freak.cpp  cpu_harris_brief.cpp  cpu_harris_freak.cpp  cpu_orb.cpp  cpu_shi_tomasi_brief.cpp  cpu_shi_tomasi_freak.cpp  cpu_star_brief.cpp  cpu_star_freak.cpp  cpu_surf.cpp  cuda_orb.cpp  cuda_surf.cpp  declarations.hpp  diploma.cpp  diploma.hpp  draft  opencl_orb.cpp  opencl_surf.cpp  track.cpp  track.hpp
results/flann/: cpu_brisk.tsv  cpu_brisk.txt  cpu_brisk.xlsx  cpu_orb.tsv  cpu_orb.txt  cpu_orb.xlsx  cpu_shi_tomasi_brief.tsv  cpu_shi_tomasi_brief.txt  cpu_shi_tomasi_brief.xlsx  cpu_shi_tomasi_freak.tsv  cpu_shi_tomasi_freak.txt  cpu_shi_tomasi_freak.xlsx  cpu_surf.tsv  cpu_surf.txt  cpu_surf.xlsx
results/run logs/: cpu_brisk.txt  cpu_fast_freak.txt  cpu_harris_brief.txt  cpu_harris_freak.txt  cpu_orb.txt  cpu_shi_tomasi_brief.txt  cpu_shi_tomasi_freak.txt  cpu_star_brief.txt  cpu_star_freak.txt  cpu_surf.txt  cuda_orb.txt  cuda_surf.txt  opencl_orb.txt  opencl_surf.txt
results/tsv data/: cpu_brisk.tsv  cpu_fast_freak.tsv  cpu_harris_brief.tsv  cpu_harris_freak.tsv  cpu_orb.tsv  cpu_shi_tomasi_brief.tsv  cpu_shi_tomasi_freak.tsv  cpu_star_brief.tsv  cpu_star_freak.tsv  cpu_surf.tsv  cuda_orb.tsv  cuda_surf.tsv  opencl_orb.tsv  opencl_surf.tsv
results/xlsx tables/: cpu_brisk.xlsx  cpu_fast_freak.xlsx  cpu_harris_brief.xlsx  cpu_harris_freak.xlsx  (+10 more)
диплом/: .~lock.РПЗ.docx#  .~lock.вкр.pptx#  lu545976t3756r.tmp  lu545976t37576.tmp  lu545976t375i1.tmp  lu545976t375ig.tmp  РПЗ.docx  вкр.pptx  текст.docx
(+55 files in other folders)
